# Geant_simulations

./: PE0,5mev.root  PE100kev.root  PE100mev.root  PE1GeV.root  PE2,5mev.root  PE2,5mev1.root  esameg4.odt  user.ppt
ESERCIZI/task1b/: CMakeLists.txt  Doxyfile  GNUmakefile  task1b.cc  vis.mac
ESERCIZI/task7/G4+Garfield/NeutronGEM/: .bashrc  .cproject  .cshrc  .project  CMakeCache_CERN.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  NeutronGEM.cc  NeutronGEM.cc~  cmake_install.cmake
ESERCIZI/task7/G4+Garfield/NeutronGEM/include/: GarfieldG4FastSimulationModel.hh  GarfieldPhysics.hh  NeutronGEMDataManager.hh  NeutronGEMDetectorConstruction.hh  NeutronGEMEventAction.hh  NeutronGEMHistoManager.hh  NeutronGEMPhysicsList.hh  NeutronGEMPrimaryGeneratorAction.hh  NeutronGEMRunAction.hh  NeutronGEMStackingAction.hh  NeutronGEMSteppingAction.hh  NeutronGEMTrackInformation.hh  NeutronGEMTrackingAction.hh  NeutronGEMUserScoreWriter.hh
ESERCIZI/task7/G4+Garfield/NeutronGEM/macros/: .runAmBe241.mac.swp  cutz0.mac  projx+.mac  projx-.mac  projy+.mac  projy-.mac  run.mac  run_gamma_100MeV_forwards.mac  run_gamma_10MeV.mac  run_gamma_10MeV_forwards.mac  run_gamma_1MeV.mac  vis.mac
ESERCIZI/task7/G4+Garfield/NeutronGEM/run/: .__afs3D97  .__afs600A  .__afs81CF  .__afs930E  .__afsD588  .__afsF058  drift.gdml  start.sh  start_gammas.sh  start_gammas_forwards.sh  start_neutrons.sh
ESERCIZI/task7/G4+Garfield/NeutronGEM/src/: GarfieldG4FastSimulationModel.cc  GarfieldG4FastSimulationModel.cc~  GarfieldPhysics.cc  GarfieldPhysics.cc~  NeutronGEMDataManager.cc  NeutronGEMDetectorConstruction.cc  NeutronGEMDetectorConstruction.cc~  NeutronGEMEventAction.cc  NeutronGEMHistoManager.cc  NeutronGEMPhysicsList.cc  NeutronGEMPrimaryGeneratorAction.cc  NeutronGEMRunAction.cc  NeutronGEMStackingAction.cc  NeutronGEMSteppingAction.cc  NeutronGEMTrackInformation.cc  NeutronGEMTrackingAction.cc  NeutronGEMUserScoreWriter.cc
lez4_materiali_geom/: D1a-materials.ppt  D1b-placements.ppt
lez5_geometrieavanz_debug_UI_sensitivedetector_hits/geom_avanzate/: D2a-replicas_GDML.ppt  D2b-debugging.ppt  D3-advanced.ppt
lez5_geometrieavanz_debug_UI_sensitivedetector_hits/particlegen_UI_sensitivedetector/: PrimaryParticles.ppt
lez6_run_event_step_stackingaction/: ExtractingInfo.ppt  Stacking.ppt  TFile_TTree.pptx
lez7_Particle Processes_Physics List_Fast Simulations/: Particle definition, Process management  UserGuide-Garfield++
(+275 files in other folders)
